PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ParameterExistsCoCo.par
ParameterExistsCoCo {
var Int test = 0
seq add(Int input) : Int {
    return input + 1
}
seq main() : Void {
    test = 2
}
}