PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ReturnStatementExists2.par
ReturnStatementExists2 {
var Int test = 0
seq add(Int input) : Int {
    input + 1
    return
}
seq main() : Void {
    test = add(1)

}
}